[tool.poetry]
name = "fast-image"
version = "0.1.0"
description = ""
authors = ["Moivvas <moivvas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
pydantic = {extras = ["email"], version = "^2.5.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
fastapi-jwt-auth = "^0.5.0"
httpx = "^0.25.2"
pydantic-settings = "^2.1.0"
cloudinary = "^1.37.0"
jinja2 = "^3.1.2"
redis = "4.6"
qrcode = "^7.4.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
